# DW-ETL-end_to_end

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
commodities_dw/models/: schema.yml  source.yml
commodities_dw/models/datamart/: dm_commodities.sql  schema.yml
commodities_dw/models/staging/: schema.yml  stg_commodities.sql  stg_commodities_trade.sql
commodities_dw/seeds/: commodities_trade.csv
src/: extract_load.py
